app/assets/stylesheets/embed/embed_styles.scss
///////////////////////////////////////////
// HELIOTROPE EMBEDDED CONTENT STYLESHEET
///////////////////////////////////////////

html, body, figure, #image {
  margin: 0px;
  padding: 0px;
  border: 0px;
  width: 100%;
  // the Leaflet embed needs this on html, body and figure, but it's messing with the automatic...
  // iframe height for audio embeds, so I've inlined it on the erb templates if @presenter.image?
  // height: 100%;
}

html {
  overflow:hidden;
}

.fulcrum-media-wrapper.audio.no-transcript {
  // space for the volume bar
  margin-top: 45px;
}

.able-wrapper {
  .able {
    margin: 0px;
    box-shadow: 0 0 0 0 transparent;
    .able-player.able-video {
      // shunt the controls onto the video and hide them
      -webkit-transform: translateY(-98px);
      transform: translateY(-98px);
      -webkit-opacity: 0;
      -moz-opacity: 0;
      opacity: 0;
      -webkit-transition: all 2s ease;
      -moz-transition: all 2s ease;
      -ms-transition: all 2s ease;
      -o-transition: all 2s ease;
      transition: all 2s ease;
      // NB: z-index will be ignored with default (static) position, hence this:
      position: relative;
      // able-big-play-button has a z-index of 6500, we need the video controls (to capture clicks) over it
      z-index: 6501;
    }

    // HELIO-3656
    .able-big-play-button {
      opacity: 0.4;
      filter: alpha(opacity=40);
      background-color: #555;
      color: #fdfdfd !important;
    }
    .able-big-play-button:hover {
      opacity: .7;
      filter: alpha(opacity=70);
      color: #fdfdfd !important;
    }

    // HELIO-3674
    .able-descriptions {
      // the `able-descriptions` div needs to be contiguous with the controls, so that it's visible in the iframe
      -webkit-transform: translateY(-98px);
      transform: translateY(-98px);
      // change the height to a fixed percentage value for embed code "responsive nested divs" calculations...
      // i.e. we'll add 20% extra height if visual description are present
      min-height: 20%;
      height: 20%;
      // override other values from `ableplayer.scss` that are incompatible with embedding in CSB
      width: 100%;
      padding: 2% 0 2% 0;
    }
  }
  // :active here is a first attempt to defeat sticky touch hover behavior
  .able:hover > div:nth-child(3), .able:active > div:nth-child(3) {
    // show the controls on hover
    -webkit-opacity: 1;
    -moz-opacity: 1;
    opacity: 1;
  }

  video {
    width: 100% !important;
    height: auto !important;
  }

  audio {
    width: 100% !important;
  }
}

.fulcrum-embed-link {
  position: absolute;
  top: 0;
  right: 0;
  float: right;
  width: 6%;
  min-width: 60px;
  height: auto;
  // able div has a z-index of 5000
  z-index: 5001;
  padding: 3px;
  margin: 0;
  font-size: 11px;
  pointer-events: auto;
  box-shadow: none;
  // hide until hover
  -webkit-opacity: 0;
  -moz-opacity: 0;
  opacity: 0;
  -webkit-transition: all 2s ease;
  -moz-transition: all 2s ease;
  -ms-transition: all 2s ease;
  -o-transition: all 2s ease;
  transition: all 2s ease;
  .logo {
    width: 100%;
    height: auto;
  }
}

.fulcrum-embed-link.audio.no-transcript {
  // get it on the player but out of the way of the volume bar
  margin-top:45px;
  padding-right: 40px;
}

.able-modal-dialog{
  max-height: 90%;
  border: none;
  overflow-y: auto;
  padding: 0 10px;
  .modal-button {
    margin-bottom: 10px;
  }
}

// show link to asset on Fulcrum on hover
figure:hover > div:nth-child(1), figure:active > div:nth-child(1) {
  -webkit-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}

// show link to asset on Fulcrum using k/b navigation
.fulcrum-embed-link:focus-within {
  -webkit-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}

// show player controls if any focusable child element has the focus (k/b navigation)
.able-wrapper .able .able-player.able-video:focus-within {
  -webkit-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}

#audio-transcript-container {
  .able-transcript-area {
    height: 150px;
    .able-window-toolbar {
      height: 40px;
      padding: 2px;
      h3 {
        font-size: 16px;
        margin: 0;
      }
    }
  }

  .able-transcript {
    height: 105px;
  }
}

.embed-static-image {
  display: block;
  margin: auto;
}

.embed-static-image.portrait {
  width: auto;
  height: 100%;
}

.embed-static-image.landscape {
  width: 100%;
  height: auto
}

